[build-system]
requires = "poetry-core\u003E=1.0.0"
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autonomic-redteaming"
version = "0.1.0"
description = "Autonomous red teaming platform"
authors = ["Researcher <contact@redteam.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
httpx = "^0.23.3"
pydantic = "^1.10.2"
playwright = "^1.30.0"

[tool.poetry.dev-dependencies]
typeguard = "^4.2.0"
mypy = "^1.5.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.22.0"

[tool.poetry.scripts]
run = "main:app"
